feat: add social link logo update request
